# lib-messenger-archive

./: Cargo.toml  LICENSE.md  README.md
src/: lib.rs  messenger.rs
src/messenger/: common.rs  error.rs  html_parser.rs  messenger_plus_parser.rs  xml_parser.rs
test/: alice@example.com.html  scrappy.xml  user1234.xml
